Fixed Status Page Alignment,new theme for tables

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,7 +1,4 @@
 @charset "ISO-8859-1";
-table {
-    border:1px solid black;
-  }
   th,td {
   text-align:center;
   }
