--- a/WebContent/css/print.css
+++ b/WebContent/css/print.css
@@ -25,9 +25,6 @@
   background-color:#6648b0;
   text-align:center;
   }
-  table {
-    border:1px solid black;
-  }
   .container {
    margin-top:12%;
   }
